	Fixed bug where paste plugin would convert some Word paragraphs that looked like lists into lists.
	Fixed bug where editors wasn't properly initialized if the document.domain is set to the same as the current domain on IE.
	Fixed bug where an exception was thrown when removing an editor after opening the context menu multiple times.
Version 4.0.6 (2013-09-12)
	Added new compat3x plugin that makes it possible to load most 3.x plugins. Only available in the development package.
	Added new skin_url option enables you to load local skins when using the CDN version.
	Added new theme_url option enables you to load local themes when using the CDN version.
	Added new importcss_file_filter option to importcss to enable users to specify what files to import from.
	Added new template_preview_replace_values option to template plugin to add example data for variables.
	Added image option support for addMenuItem calls. Enables you to provide a custom image for menu items.
	Fixed bug where editor.insertContent wouldn't set format and selection type on events.
	Fixed bug where inserting BR elements on IE 8 would thrown an exception when the range is at a empty text node.
	Fixed bug where outdent of single LI element within another LI would produce an empty list element OL/UL.
	Fixed bug where the bullist/numlist buttons wouldn't be deselected when deleting all contents.
	Fixed bug where toggling an empty list item off wouldn't produce a new empty block element.
	Fixed bug where it wasn't possible to apply lists to mixed text blocks and br lines.
	Fixed bug where it wasn't possible to paste contents on iOS when the paste plugin was enabled.
	Fixed bug where it wasn't possible to delete HR elements on Gecko.
	Fixed bug where scrolling and refocusing using the mouse would place the caret incorrectly on IE.
	Fixed bug where you needed to hit the empty paragraph to get editor focus in IE 11.
	Fixed bug where activeEditor wasn't set to the correct editor when opening windows.