@@ -17,8 +17,11 @@
 define("tinymce/pasteplugin/Clipboard", [
 	"tinymce/Env",
 	"tinymce/util/Tools",
-	"tinymce/util/VK"
-], function(Env, Tools, VK) {
+	"tinymce/util/VK",
+	"tinymce/html/DomParser",
+	"tinymce/html/Serializer",
+	"tinymce/html/Schema"
+], function(Env, Tools, VK, DomParser, Serializer, Schema) {
 	function hasClipboardData() {
 		// Gecko is excluded until the fix: https://bugzilla.mozilla.org/show_bug.cgi?id=850663
 		return !Env.gecko && (("ClipboardEvent" in window) || (Env.webkit && "FocusEvent" in window));
@@ -36,8 +39,64 @@ define("tinymce/pasteplugin/Clipboard", [
 			return (VK.metaKeyPressed(e) && e.keyCode == 86) || (e.shiftKey && e.keyCode == 45);
 		}
 
+		/**
+		 * Gets the innerText of the specified element. It will handle edge cases
+		 * and works better than textContent on Gecko.
+		 *
+		 * @param {Element} elm HTML element to get text from.
+		 * @return {String} String of text with line feeds.
+		 */
 		function innerText(elm) {
-			return elm.innerText || elm.textContent;
+			var schema = new Schema(), domParser = new DomParser({}, schema), text = '';
+			var shortEndedElements = schema.getShortEndedElements();
+			var ignoreElements = Tools.makeMap('script noscript style textarea video audio iframe object', ' ');
+			var blockElements = editor.schema.getBlockElements();
+
+			function walk(node) {
+				var name = node.name, currentNode = node;
+
+				if (name === 'br') {
+					text += '\n';
+					return;
+				}
+
+				// img/input/hr
+				if (shortEndedElements[name]) {
+					text += ' ';
+				}
+
+				// Ingore script, video contents
+				if (ignoreElements[name]) {
+					text += ' ';
+					return;
+				}
+
+				if (node.type == 3) {
+					text += node.value;
+				}
+
+				// Walk all children
+				if (!node.shortEnded) {
+					if ((node = node.firstChild)) {
+						do {
+							walk(node);
+						} while ((node = node.next));
+					}
+				}
+
+				// Add \n or \n\n for blocks or P
+				if (blockElements[name] && currentNode.next) {
+					text += '\n';
+
+					if (name == 'p') {
+						text += '\n';
+					}
+				}
+			}
+
+			walk(domParser.parse(elm.innerHTML));
+
+			return text;
 		}
 
 		function shouldPasteAsPlainText() {
@@ -322,5 +381,6 @@ define("tinymce/pasteplugin/Clipboard", [
 
 		this.paste = processHtml;
 		this.pasteText = processText;
+		this.innerText = innerText;
 	};
 });
